Add StructuredActiveProducer